# auto-api

./: Cargo.toml  dprint.json  justfile
src/: endpoint.rs  error.rs  lib.rs  registry.rs  response.rs  schema.rs  ts.rs  util.rs  void.rs
src/api/: mod.rs  shared.rs
src/api/users/: get.rs  list.rs  mod.rs
